@@ -1,0 +1,31 @@
+This folder contains a number of files of various types.
+Some are intended for general use and are documented in 
+the BOARD18 WIKI which is located at wiki.board18.org.
+
+The following list of files and their WIKI documentation 
+pages should not be considered to be exhaustive:
+
+FILE               WIKI documentation page
+----------------   --------------------------------
+board18db.txt      How To Create a BOARD18 WEB Site
+BOARD18update      How To Update a BOARD18 WEB Site
+config.php         How To Create a BOARD18 WEB Site        
+control.sh         How To Update a BOARD18 WEB Site
+massLoadBoxes.php 
+
+There are a number of deprecated files in this folder.
+Their use should be avoided if possible. They are:
+
+FILE               Alternative
+----------------   --------------------------------
+listAllGames.php   Use the online "Manage Games" option.
+loadAllBoxes       Use massLoadBoxes.php instead.
+loadGameBox.php    Use the online "Load Game Box" option.
+
+And finally there are these testing utilities which are
+not recommended for use with production BOARD18.
+
+addJSONtoBox.php  
+addJSONtoGame
+depricated.html
+emptyDatabase
