@@ -1,3 +1,10 @@
+BOARD18 2.4.6 Release Notes
+
+Changes from 2.4.5 Release:
+Fixed numerous errors in the validation code in the updateBox()
+function in the board18Boxes.js file. Also added a README file
+to the utility directory to document its contents better.
+
 BOARD18 2.4.5 Release Notes
 
 Changes from 2.4.4 Release:
